# TROGDOR

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
cli/: commands.py  main.py
scripts/: README.md
scripts/benchmark/: benchmark.py  benchmark_bw.py  benchmark_tile_position.py  compare_peaks.py  fdr_bw.py  fdr_dreg.py  frip.py  infp_filter.py  logit_dist.py  threshold_sweep.py
scripts/data/: download_genome.sh  download_holdout_data.sh  download_peaks.sh  download_test_data.sh  download_training_data.sh
scripts/train/: lr_search.py  slurm.sh  train.py  train_bce.py  train_bce_PINTS.py  train_bce_SCREEN.py  train_focal+tversky.py  train_focaltversky.py
src/burninate/: __init__.py  cli.py  dataset.py  predict.py  trogdor.py
src/chiaroscuro/: __init__.py  cli.py  commands.py  data_transforms.py  dataset.py  logger.py  losses.py  modules.py  predict.py  stats.py  trogdor.py  utils.py
tests/: README.md  conftest.py  test_cli.py  test_dataset.py  test_predict.py  test_trogdor.py
