[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trogdor"
version = "0.2.0"
description = "Transcription Run-On Grants Detection Of Regulatory elements (TROGDOR)"
authors = [{ name = "Adam He", email = "adamyhe@gmail.com" }]
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/adamyhe/trogdor" }
requires-python = ">= 3.9"
dependencies = [
    "torch",
    "torcheval",
    "pybigtools",
    "numpy",
    "pandas",
    "tqdm",
    "huggingface_hub",
]

[project.scripts]
TROGDOR = "cli.main:cli"
trogdor = "cli.main:cli"
dREG = "cli.main:cli"
dreg = "cli.main:cli"

[project.optional-dependencies]
dev = ["pytest", "wandb", "matplotlib", "scikit-learn"]

[tool.setuptools]
package-dir = { "" = "src", "cli" = "cli" }
packages = ["chiaroscuro", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require real BigWig/BED files on disk (deselected by default)",
]
